--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -101,7 +101,7 @@ header h2 {
 }
 
 #main-content {
-  width: 690px;
+  width: 100%;
   float: left;
 }
 
@@ -109,7 +109,7 @@ header h2 {
   max-width: 100%;
 }
 
-aside#sidebar {
+/*aside#sidebar {
   width: 200px;
   padding-left: 20px;
   min-height: 504px;
@@ -122,7 +122,7 @@ aside#sidebar {
 aside#sidebar p.repo-owner,
 aside#sidebar p.repo-owner a {
   font-weight: bold;
-}
+}*/
 
 #downloads {
   margin-bottom: 40px;
